# dice

./: .gitignore  CMakeLists.txt  README-C-DISPATCHER-GENERATOR.md  README.md  notes  test_config.txt  test_config_v2.txt  test_cycle.txt
.github/workflows/: actions-smolbsd.yml  docker-smolbsd.yml
bench/micro/: CMakeLists.txt
include/dice/: interpose.h
scripts/: CMakeLists.txt  generate-dispatcher-finegrained.c  generate-dispatcher-linked.c  generate-docs.c  generate-module-order.c
src/mod/: CMakeLists.txt  mman.c  stacktrace.c
test/: CMakeLists.txt
test/checkers/: trace_checker.c
test/interpose/: CMakeLists.txt  pthread_mutex_test.c  pthread_rwlock_test.c  sem_test.c
test/log/: log_levels.c
test/order/: CMakeLists.txt
